# curly-eureka

./: .gitignore  CURLY-EUREKA-INCL.cmake  HooksUtils.hpp  ModUtils.cpp  ModUtils.hpp  README.md  ValueSetupPopup.cpp  ValueSetupPopup.hpp  _SET_ENV.cmd  hooks.cpp  hooks.hpp  mapped-hooks.hpp  mod_utils.cpp  mod_utils.hpp
ce-main-src/: HooksUtils.hpp  ModUtils.cpp  ModUtils.hpp
ceGameVersionDependentSrc_2.1/: ModUtilsExt.cpp  ModUtilsExt.hpp  ValueSetupPopup.cpp
ceGameVersionDependentSrc_2.113/: ModUtilsExt.cpp  ValueSetupPopup.hpp
ceImGuiHook/: README.md  _incl.cmake  imgui-hook.cpp  imgui-hook.hpp
ceMainSrc/: HooksUtils.cpp  HooksUtils.hpp  ModUtils.cpp  ModUtils.hpp
cocos-headers_2.1/: CMakeLists.txt
cocos-headers_2.200/cocos2dx/: CCDirector.h
gd.h/: README.md
gd.h/audio_nodes/: FMODAudioEngine.h
gd.h/delegates/: AppDelegate.h  delegates.h
gd.h/include/: gd.h  gdMacros.h
gd.h/layers_scenes_transitions_nodes/: DailyLevelPage.h  FLAlertLayer.h  GJBaseGameLayer.h  GJGarageLayer.h  GJOptionsLayer.h  InfoLayer.h  KeysLayer.h  LeaderboardsLayer.h  LevelBrowserLayer.h  LevelInfoLayer.h  LevelSettingsLayer.h  LikeItemLayer.h  LoadingCircle.h  LoadingLayer.h  MenuLayer.h  PauseLayer.h  PlayLayer.h  ProfilePage.h  TextAlertPopup.h
gd.h/level_nodes/: GJComment.h  GJGameLevel.h  GJRewardItem.h  GJSearchObject.h  LevelSettingsObject.h
gd.h/manager_nodes/: GJAccountManager.h  GJUserScore.h  (+5 more)
imgui-hook/: CMakeLists.txt  imgui-hook.cpp
minhook-multihook/: CMakeLists.txt
uibuilder/: CMakeLists.txt  LICENSE  README.md  UIBuildMacros.hpp  UIBuilder.hpp
(+66 files in other folders)
